--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2169,3 +2169,14 @@ input:checked + .slider-switch:before {
 input:disabled{
     cursor: not-allowed;
 }
+
+.icon-ads object{
+    width: 42px;
+    border-radius: 4px;
+    /* padding:12px; */
+    background-color: #fff;
+    box-shadow: 0px 2px 6px #00000012;
+}
+.icon-ads{
+    margin-top: -43px;
+}
