--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1177,6 +1177,19 @@ body {
     padding: 4px 10px;
     margin-right: auto;
 }
+.item-badge .orange {
+    background-color: #FFF0C2;
+    border-radius: 3px;
+    font-weight: bold;
+    font-size: 11px;
+    color: #CA881F;
+    line-height: 1.4;
+    letter-spacing: normal;
+    margin-bottom: 4px;
+    height: 20px;
+    padding: 4px 10px;
+    margin-right: auto;
+}
 
 .item-badge .coret {
     font-size: 0.714286rem;
@@ -2179,4 +2192,11 @@ input:disabled{
 }
 .icon-ads{
     margin-top: -43px;
+}
+
+.tab-pane-custom{
+    display: none;
+}
+.tab-pane-custom.active{
+    display: block;
 }
